# onelab-raspberrypi-booter

./: .gitignore  Cargo.toml  README.md  onelab-rpi-booter  onelab-rpi-booter.x.c
src/: linux.rs  main.rs
